Return `AttributesSaveResult` instead of just `List<Long>` when saving attributes